--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "d3": "^4.4.0",
     "d3-sankey": "^0.4.1",
-    "d3-sankey-diagram": "^0.4.1"
+    "d3-sankey-diagram": "^0.4.1",
+    "sass": "^0.5.0"
   }
 }
